--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@
 VITE_API_URL="http://localhost:4000/graphql"
 
 # For production (update with your actual Render backend URL)
-# VITE_API_URL="https://forksy-api.onrender.com/graphql"
+# VITE_API_URL="https://forksy-backend.onrender.com/graphql"
