--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,5 +8,6 @@
 	"tabWidth": 2,
 	"arrowParens": "always",
 	"useTabs": true,
-	"endOfLine": "lf"
+	"endOfLine": "lf",
+	"plugins": ["prettier-plugin-tailwindcss"]
 }
