--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"react-head": "^3.4.2",
 		"react-hook-form": "^7.66.1",
 		"react-icons": "^5.5.0",
+		"react-loader-spinner": "^8.0.0",
 		"react-router-dom": "^6.30.1",
 		"react-svg": "^16.3.0",
 		"rxjs": "^7.8.2",
@@ -66,6 +67,7 @@
 		"eslint-plugin-react-refresh": "^0.4.23",
 		"globals": "^16.4.0",
 		"prettier": "^3.6.2",
+		"prettier-plugin-tailwindcss": "^0.7.2",
 		"typescript": "~5.9.3",
 		"typescript-eslint": "^8.46.0",
 		"vite": "^7.1.7",
