--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite --port 5173",
-		"build": "tsc -b && vite build",
+		"build": "yarn generate && tsc -b && vite build",
 		"lint": "eslint . --ext .js,.jsx,.ts,.tsx",
 		"preview": "vite preview",
 		"generate": "graphql-codegen && node scripts/add-operations-imports.js"
