--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"@types/react": "^19.1.16",
 		"@types/react-dom": "^19.1.9",
 		"@vitejs/plugin-react-swc": "^4.1.0",
+		"dotenv": "^17.2.3",
 		"eslint": "^9.37.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-import": "^2.32.0",
