--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
 	"rewrites": [
 		{
-			"source": "/(.*)",
+			"source": "/((?!assets/|sw.js|site.webmanifest|robots.txt|sitemap.xml|.*\\.(?:js|css|json|woff|woff2|ttf|eot|svg|png|jpg|jpeg|gif|webp|ico)).*)",
 			"destination": "/index.html"
 		}
 	],
